# life_expectancy

./: .coverage  .gitignore  cleaning.py  pyproject.toml
.github/workflows/: pipeline.yml
life_expectancy/: .pylintrc  cleaning.py  enums.py  import pandas as pd.py  strategies.py
life_expectancy/tests/: __init__.py  test_cleaning.py  test_region.py
life_expectancy/tests/fixtures/: pt_life_expectancy_expected.csv
tests/: conftest.py  test_pyproject.py
